--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
-    implementation "androidx.paging:paging-runtime:3.0.1"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
