--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     implementation "androidx.room:room-runtime:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:preference-v7:25.0.1'
 }
